--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     background-color: white;
     margin: 0px;
 
@@ -134,3 +134,4 @@ li {
 .github {
     position: absolute;
 }
+*/
