--- a/style.css
+++ b/style.css
@@ -1,57 +1,33 @@
-/*body {
-    background-color: white;
+body {
     margin: 0px;
-
 }
 
 #div-apresentacao {
     background-color: silver;
-
-    height: 400px;
-
 }
 
 h1 {
-    position: absolute;
-    font-family: 'Open Sans';
-    font-weight: 500;
-    left:585px;
-    top: 50px;
+
 }
 
 h3 {
-    position: absolute;
     font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
-    left:587px;
-    top: 100px;
 }
 
 
-.foto-lucas {
+.img-lucas {
     width: 250px;
     border-radius: 50%;
-    border: rgb(109, 106, 106) solid 3px;
-    position: absolute;
-    margin: 10px;
-    left: 250px;
-    top: 50px;
-
-    
+    border: rgb(109, 106, 106) solid 3px; 
 }
 
 #texto {
-    position: absolute;
-    width: 400px;
-    top: 160px;
-    left: 583px;
+
 }
 
 p {
     font-family: 'Arial Narrow Bold', sans-serif;
-    text-align: justify;
-    margin: 0px;
-    padding: 5px;
 
 }
 
@@ -62,12 +38,10 @@ hr {
 
 #div-habilidades {
     background-color: rgb(218, 221, 223);
-    height: 400px;
-    padding-top: 20px;
  
 }
 
-.engrenagem {
+.img-engrenagem {
     position: absolute;
     width: 200px;
     left: 900px;
@@ -76,12 +50,9 @@ hr {
 
 
 h4 {
-position: absolute;
 font-family: 'Open Sans';
 font-weight: 500;
 font-size: 38px;
-left: 375px;
-bottom: 70px;
 }
 
 li {
@@ -90,48 +61,33 @@ li {
 .ul-1 {
     font-family: 'Open Sans', sans-serif;
     font-size: 30px;
-    line-height: 25px;
-    margin: 0px;
-    position: absolute;
     font-weight: lighter;
-    left: 200px;
-    top: 525px;
 }
 
 .ul-2 {
     font-family: 'Open Sans', sans-serif;
     font-size: 30px;
-    line-height: 25px;
-    margin: 0px;
-    position: absolute;
     font-weight: lighter;
-    left: 550px;
-    top: 525px;
 }
 
 #div-outras-infos {
     background-color: #bdab9c;
-    height: 250px;
-
 }
 
 .contato {
-    position: absolute;
     font-family: 'Open Sans';
     font-weight: 500;
     font-size: 38px;
-    top: 900px;
 }
 
 .email {
-    position: absolute;
+
 }
 
 .linkedin {
-    position: absolute;
+
 }
 
 .github {
-    position: absolute;
+
 }
-*/
