--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 }
 
 h1 {
-
+    font-family: 'Open Sans', sans-serif;
 }
 
 h3 {
+    font-family: 'Open Sans', sans-serif;
     font-family: 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
 }
@@ -80,14 +81,7 @@ li {
     font-size: 38px;
 }
 
-.email {
 
-}
-
-.linkedin {
-
-}
-
-.github {
-
+.img-github {
+    width: 40px;
 }
