--- a/style.css
+++ b/style.css
@@ -4,16 +4,32 @@ body {
 
 #div-apresentacao {
     background-color: silver;
+    margin: 0px;
+    padding-bottom: 1px;
+
+}
+
+.img-lucas {
+}
+
+.div-texto-apresentacao {
+    max-width: 50%;
+    display: inline-block;
+
 }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
 }
 
 h3 {
     font-family: 'Open Sans', sans-serif;
-    font-family: 'Arial Narrow Bold', sans-serif;
-    font-weight: normal;
+    font-weight: 500px;
+}
+
+.div-texto-apresentacao p {
+    text-align: justify;
 }
 
 
@@ -39,14 +55,13 @@ hr {
 
 #div-habilidades {
     background-color: rgb(218, 221, 223);
+    margin: 0px;
+    padding: 1px 1px;
  
 }
 
 .img-engrenagem {
-    position: absolute;
     width: 200px;
-    left: 900px;
-    top: 450px;
 }
 
 
@@ -73,6 +88,8 @@ li {
 
 #div-outras-infos {
     background-color: #bdab9c;
+    margin: 0px;
+    padding: 1px 1px;
 }
 
 .contato {
