--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ li {
     background-color: #bdab9c;
     margin: 0px;
     padding: 1px 1px;
+    display: flex;
 }
 
 .contato {
@@ -121,13 +122,30 @@ li {
 
 .div-whats-e-email {
     display: inline-block;
+    width: 50%;
+
  
 }
 
 .div-linkedin-e-github {
     display: inline-block;
+    width: 50%;
+
 
 }
+
+.img-gmail {
+    width: 40px;
+}
+
+.img-whatsapp {
+    width: 47px;
+}
+
+.img-linkedin {
+    width: 45px;
+}
+
 
 .img-github {
     width: 40px;
