--- a/style.css
+++ b/style.css
@@ -109,9 +109,8 @@ li {
 
 #div-outras-infos {
     background-color: #bdab9c;
-    margin: 0px;
-    padding: 1px 1px;
-    display: flex;
+    padding-bottom: 60px;
+
 }
 
 .contato {
@@ -121,31 +120,62 @@ li {
 }
 
 .div-whats-e-email {
+    text-align: center;
     display: inline-block;
-    width: 50%;
 
- 
 }
 
+.div-whatsapp {
+    margin-bottom: 5%;
+}
+
+
 .div-linkedin-e-github {
+    text-align: center;
     display: inline-block;
-    width: 50%;
+ 
 
+}
 
+.div-linkedin {
+    margin-bottom: 5%;
 }
 
 .img-gmail {
-    width: 40px;
+    width: 37px;
+}
+
+.div-email p {
+    display: inline-block;
+    position: relative;
+    bottom: 9px;
 }
 
 .img-whatsapp {
-    width: 47px;
+    width: 40px;
+}
+
+.div-whatsapp p {
+    display: inline-block;
+    position: relative;
+    bottom: 15px;
+}
+
+.div-linkedin a {
+    display: inline-block;
+    position: relative;
+    bottom: 19px;
 }
 
 .img-linkedin {
     width: 45px;
 }
 
+.div-github a {
+    display: inline-block;
+    position: relative;
+    bottom: 16px;
+}
 
 .img-github {
     width: 40px;
