--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@
 #div-apresentacao {
     background-color: silver;
     padding: 30px;
+    width: 100%;
+    text-align: center;
 }
 
 .img-lucas {
     display: inline-block;
-    margin-left: 15%;
     margin-top: 5%;
     margin-bottom: 5%;
     vertical-align: auto;
-    width: 30%;
 }
 
 .div-texto-apresentacao {
     max-width: 35%;
     display: inline-block;
-    margin-left: 2%;
     margin-left: 50px;
+    margin-right: 10%;
     margin-bottom: 5px;
     text-align: left;
     position: relative;
@@ -109,7 +109,7 @@ li {
 
 #div-outras-infos {
     background-color: #bdab9c;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
 
 }
 
