--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 * {
     margin: 0%;
+    border: 0%;
+    padding: 0%;
 }
 
 #div-apresentacao {
-    background-color: silver;
-    padding: 30px;
-    width: 100%;
+    background-color: rgb(201, 201, 201);
+    padding: 3%;
     text-align: center;
 }
 
@@ -13,7 +14,6 @@
     display: inline-block;
     margin-top: 5%;
     margin-bottom: 5%;
-    vertical-align: auto;
 }
 
 .div-texto-apresentacao {
@@ -53,10 +53,6 @@ h3 {
     border: rgb(109, 106, 106) solid 3px; 
 }
 
-#texto {
-
-}
-
 p {
     font-family: 'Arial Narrow Bold', sans-serif;
     font-size: 18px;
@@ -67,6 +63,16 @@ p {
 hr {
     margin: 0px;
 }
+
+
+
+
+
+
+
+
+
+
 
 #div-habilidades {
     background-color: rgb(218, 221, 223);
@@ -106,6 +112,15 @@ h4 {
 li {
     margin: 20px;
 }
+
+
+
+
+
+
+
+
+
 
 #div-outras-infos {
     background-color: #bdab9c;
