--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@
     width: 250px;
     border-radius: 50%;
     border: rgb(151, 151, 151) solid 3px; 
+    margin-right: 2%;
 }
 
 .div-texto-apresentacao {
     width: 35%;
     display: inline-block;
-    margin-left: 4%;
+    margin-left: 2%;
     margin-bottom: 5px;
     text-align: left;
     vertical-align: middle;
@@ -160,6 +161,7 @@ li {
 
 .div-whatsapp p {
     display: inline-block;
+    vertical-align: middle;
 }
 .div-email p {
     display: inline-block;
@@ -191,4 +193,10 @@ li {
 .img-github {
     width: 40px;
     display: inline-block;
+}
+
+
+
+.divide {
+    padding: 0.8%;
 }
